--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,10 +49,18 @@ android {
 }
 
 dependencies {
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
 
-
-    //Google font
-    implementation "androidx.compose.ui:ui-text-google-fonts:1.3.0"
+    //paging
+    def paging_version = "3.2.0-rc01"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
     // Retrofit
     def retrofit_version = '2.9.0'
@@ -83,4 +91,5 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    testImplementation "androidx.paging:paging-common:$paging_version"
 }
