--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ plugins {
 }
 
 android {
-    namespace 'com.example.rickandmorty'
+    namespace 'com.reyesmicaela.rickandmorty'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.rickandmorty"
+        applicationId "com.reyesmicaela.rickandmorty"
         minSdk 24
         targetSdk 33
-        versionCode 1
+        versionCode 2
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -24,8 +24,13 @@ android {
 
     buildTypes {
         release {
+            debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+        }
+        debug {
+            debuggable true
         }
     }
     compileOptions {
@@ -58,6 +63,9 @@ dependencies {
         }
     }
 
+    // Compose Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
     //paging
     def paging_version = "3.2.0-rc01"
     implementation "androidx.paging:paging-runtime:$paging_version"
@@ -74,6 +82,8 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    //splashScreen
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
