--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,10 +82,13 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
     //splashScreen
     implementation 'androidx.core:core-splashscreen:1.0.0'
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.1")
@@ -93,7 +96,9 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
+    implementation "androidx.compose.material:material-icons-extended"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
