--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,14 @@ dependencies {
     //splashScreen
     implementation 'androidx.core:core-splashscreen:1.0.0'
 
+    //constraintlayout compose
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+
+    // Room
+    def room_version = "2.5.0"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
